@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>it.uniroma2.art.semanticturkey</groupId>
 		<artifactId>semanticturkey</artifactId>
-		<version>0.9.0-SNAPSHOT</version>
+		<version>0.9.0</version>
 	</parent>
 
 	<artifactId>st-launcher</artifactId>
@@ -329,7 +329,7 @@
 		<dependency>
 			<groupId>it.uniroma2.art.owlart</groupId>
 			<artifactId>owlart-api</artifactId>
-			<version>2.0.5-SNAPSHOT</version>
+			<version>2.0.5</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
