@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>it.uniroma2.art.semanticturkey</groupId>
 		<artifactId>semanticturkey</artifactId>
-		<version>0.9.0-SNAPSHOT</version>
+		<version>0.9.0</version>
 	</parent>
 
 	<artifactId>st-sesame2-ontmanager</artifactId>
@@ -112,7 +112,7 @@
 		<dependency>
 			<groupId>it.uniroma2.art.owlart</groupId>
 			<artifactId>owlart-api</artifactId>
-			<version>2.0.5-SNAPSHOT</version>
+			<version>2.0.5</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -151,7 +151,7 @@
 		<dependency>
 			<groupId>it.uniroma2.art.owlart</groupId>
 			<artifactId>owlart-sesame2impl</artifactId>
-			<version>1.0.5-SNAPSHOT</version>
+			<version>1.0.5</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
